2012-12-16  Levi Weintraub  <leviw@chromium.org>

        Push pixel snapping logic into TransformState
        https://bugs.webkit.org/show_bug.cgi?id=101779

        Reviewed by Simon Fraser.

        Eliminating use of SnapOffsetForTransforms as it's no longer needed.

        * WebProcess/FullScreen/WebFullScreenManager.cpp:
        (WebKit::screenRectOfContents):

2012-12-16  Anders Carlsson  <andersca@apple.com>

        Rename WebFrame::convertHandleToDownload to convertMainResourceLoadToDownload
        https://bugs.webkit.org/show_bug.cgi?id=105134

        Reviewed by Sam Weinig.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::convertMainResourceLoadToDownload):
        * WebProcess/WebPage/WebFrame.cpp:
        (WebKit::WebFrame::convertMainResourceLoadToDownload):
        * WebProcess/WebPage/WebFrame.h:
        (WebFrame):

2012-12-15  Anders Carlsson  <andersca@apple.com>

        Rename FrameLoaderClient::download to convertMainResourceLoadToDownload
        https://bugs.webkit.org/show_bug.cgi?id=105122

        Reviewed by Andreas Kling.

        Update for WebCore changes.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::convertMainResourceLoadToDownload):
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.h:
        (WebFrameLoaderClient):

2012-12-15  Anders Carlsson  <andersca@apple.com>

        Another build fix.

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::createDownloadProxy):

2012-12-15  Andy Estes  <aestes@apple.com>

        [WebKit2] Have CustomProtocolManager and CustomProtocolManagerProxy store Connections for messaging
        https://bugs.webkit.org/show_bug.cgi?id=105124

        Reviewed by Anders Carlsson.

        Remove CustomProtocolManagerProxy's assumption that all messages go to
        a web process. Have it take a ChildProcessProxy instead and extract its
        connection.
