@@ -1,3 +1,13 @@
+2012-12-16  Andy Estes  <aestes@apple.com>
+
+        [WebKit2] CustomProtocolManager should intercept messages of class MessageClassCustomProtocolManager sent to the network process
+        https://bugs.webkit.org/show_bug.cgi?id=105137
+
+        Reviewed by Anders Carlsson.
+
+        * NetworkProcess/NetworkProcess.cpp:
+        (WebKit::NetworkProcess::didReceiveMessage):
+
 2012-12-16  Levi Weintraub  <leviw@chromium.org>
 
         Push pixel snapping logic into TransformState
